# twofortyeight

./: .gitconfig  .gitignore  404.html  README.md  game.py  grid.tcss  index.html  mkdocs.yml  pyproject.toml  pyscript.toml  search.html  search.json  zensical.toml
.github/workflows/: deploy_game.yml
_templates/: main.html
search/: search_index.json
twofortyeight/: game.py  index.md
twofortyeight/stylesheets/: custom.css  dracula-ui.min.css
