[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "twofortyeight"
version = "0.0.1"
authors = [
  { name="Melissa Mendonça", email="melissawm@gmail.com" },
]
description = "2048 game implemented in Textual Web"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]
dependencies = [
  "textual",
  "mkdocs",
  "mkdocs-dracula-theme",
  "jupyterlite-core",
]

[project.urls]
Homepage = "https://github.com/axequalsb/twofortyeight"
Issues = "https://github.com/melissawm/twofortyeight"
